--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ layout: base.njk
 <p>Find the perfect pairings for your favorite foods.</p>
 
 <ul>
-  {% for post in collections.post reversed %}
+  {% for post in collections.post | reverse %}
     <li>
       <a href="{{ post.url }}">{{ post.data.title }}</a> – {{ post.date | date: "%B %d, %Y" }}
     </li>
