--- a/index.njk
+++ b/index.njk
@@ -9,7 +9,7 @@ layout: base.njk
 <ul>
   {% for post in collections.post | reverse %}
     <li>
-      <a href="{{ post.url }}">{{ post.data.title }}</a> – {{ post.date | date("MMMM d, yyyy") }}
+      <a href="{{ post.url }}">{{ post.data.title }}</a> – {{ post.date }}
     </li>
   {% endfor %}
 </ul>
