--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>{{ title }}</title>
   <meta name="description" content="{{ description or 'Food pairing blog' }}">
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-xxxxxxxxxx" crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6998682919715138"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <main>
