--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -86,7 +86,7 @@
       <a href="/contact/">Contact</a> |
       <a href="/privacy-policy/">Privacy Policy</a>
     </p>
-    <p>&copy; {{ "now" | date("YYYY") }} What To Eat With</p>
+    <p>&copy; 2025 What To Eat With</p>
   </footer>
 
 </body>
