--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -25,12 +25,22 @@
       margin-top: 0;
     }
     header {
+      position: sticky;
+      top: 0;
+      background-color: #fffaf2;
+      z-index: 1000;
+      border-bottom: 1px solid #eee;
+      padding: 1rem 0;
       text-align: center;
-      padding: 2rem 0 1rem;
     }
     nav {
+      background-color: #fffaf2;
+      padding: 0.5rem 0 1rem;
+      border-bottom: 1px solid #eee;
+      position: sticky;
+      top: 66px;
+      z-index: 999;
       text-align: center;
-      margin-bottom: 2rem;
     }
     nav a {
       margin: 0 1rem;
