--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-google-site-verification: google5d2cd8493e0ba6d4.html
+<meta name="google-site-verification" content="vMtFGm-T5uZWXF9nB6TulfIP1b5eh9bVkvX5C9aztKQ" />
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
