--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -163,12 +163,13 @@
     </script>
   </div>
 
-  <main>
-{% if page.url contains '/posts/' %}
+<main>
+{% if "/posts/" in page.url %}
 <h1>{{ title }}</h1>
 {% endif %}
-    {{ content | safe }}
-  </main>
+{{ content | safe }}
+</main>
+
 
   <footer>
     <p>© {{ "" | year }} What To Eat With</p>
