--- a/index.njk
+++ b/index.njk
@@ -26,4 +26,8 @@ layout: base.njk
       </li>
     {% endfor %}
   </ul>
+
+  <div style="margin-top: 1rem; text-align: right;">
+    <a href="/all-posts/" style="text-decoration: underline;">See All Posts →</a>
+  </div>
 </section>
