--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ title }}</title>
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
   <meta name="description" content="{{ description | default('Daily food pairing ideas, served fresh') }}">
   <link rel="icon" type="image/png" href="/assets/favicon-wtew.png" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter:wght@400;700&display=swap" rel="stylesheet" />
@@ -12,6 +13,7 @@
  <meta name="google-site-verification" content="cpo1-EVjSY5BaZGXQb3AIqoW6ZY9YIpf5zrl86j8soU" />
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6998682919715138" crossorigin="anonymous"></script>
+
   <style>
     body {
       font-family: 'Inter', sans-serif;
