--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -11,6 +11,7 @@
   
   <!-- Google Verification Meta Tag -->
  <meta name="google-site-verification" content="cpo1-EVjSY5BaZGXQb3AIqoW6ZY9YIpf5zrl86j8soU" />
+<meta name="google-adsense-account" content="ca-pub-6998682919715138">
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6998682919715138" crossorigin="anonymous"></script>
 
