--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -168,6 +168,13 @@
 
 <main>
 {% if "/posts/" in page.url %}
+{% set dateHash = (date | date("X")) | int(0) %} {# Unix timestamp #}
+{% set imageIndex = dateHash % images.length %}
+{% set imageFile = images[imageIndex] %}
+<img src="/assets/images/{{ imageFile }}" alt="Wine Art" style="max-width:100%;border-radius:12px;margin-bottom:2rem;">
+
+ <div style="text-align:center; margin-bottom:2rem;">
+  </div>
 <h1>{{ title }}</h1>
 {% endif %}
 {{ content | safe }}
