--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -168,7 +168,7 @@
 
 <main>
 {% if "/posts/" in page.url %}
-{% set urlHash = page.url | sum %}
+{% set urlHash = (page.url | string) | sum %}
 {% set imageIndex = urlHash % images.length %}
 {% set imageFile = images[imageIndex] %}
 <img src="/assets/images/{{ imageFile }}" alt="Food Art" style="max-width:100%;border-radius:12px;margin-bottom:2rem;">
