--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -172,6 +172,8 @@
   {% set dateHash = (date | date("X")) | int(0) %}
   {% set imageIndex = dateHash % images.length %}
   {% set imageFile = images[imageIndex] %}
+<p>DEBUG: date={{ date }} | page.date={{ page.date }} | page.url={{ page.url }}</p>
+
   <img src="/assets/images/{{ imageFile }}" alt="Food Art" style="max-width:100%;border-radius:12px;margin-bottom:2rem;">
 {% endif %}
 
